fix: pwa install promt is covered by footer tabs on mobile screens

--- a/components/UI/ui.module.scss
+++ b/components/UI/ui.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  @media (max-width: 724px) {
+    margin-bottom: 100px;
+  }
 }
 
 .InstallPromptContainer_button_container {
